fix: misaligned heading, when it's empty

--- a/packages/web/src/components/TipTap/styles/styles.scss
+++ b/packages/web/src/components/TipTap/styles/styles.scss
@@ -269,6 +269,7 @@ $crinkle-unfold-bg: #efefef;
       margin-left: -100px;
       position: relative;
       z-index: 1;
+      min-width: 100%;
 
       &:hover ~ .buttonWrapper {
         visibility: visible;
